# FMLM-to-UBI

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: backend.yml  frontend.yml
apps/ios/FMLMUBI/Coordinator/: OnboardingCoordinator.swift
apps/ios/FMLMUBI/FMLMUBI.xcodeproj/: project.pbxproj
apps/ios/FMLMUBI/Services/: AuthService.swift
apps/ios/FMLMUBI/ViewModels/: OnboardingViewModel.swift
apps/ios/FMLMUBI/Views/Screens/: KycIntroView.swift  RegisterView.swift  SmsVerifyView.swift
apps/web-astro/: README.md  package.json
docs/adr/: 0001-0002.md  0003-frontend-web3-seo.md  0004-email-sendgrid.md
docs/marketing/: landing-wireframe.md
infra/compose/: dev.yml
ios/: README-ios.md
ios/FMLMUBI/FMLMUBI/: FMLMUBIApp.swift
ios/FMLMUBI/FMLMUBI.xcodeproj/project.xcworkspace/xcuserdata/chocos.xcuserdatad/: UserInterfaceState.xcuserstate
ios/FMLMUBI/FMLMUBI.xcodeproj/xcuserdata/chocos.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/FMLMUBI/Models/: Types.swift
ios/FMLMUBI/Services/: MockAuthService.swift  RealAuthService.swift
ios/FMLMUBI/Views/Components/: OTPField.swift
ios/FMLMUBI/Views/Screens/: EmailVerifyView.swift  HomeView.swift  KycStatusView.swift  SplashView.swift  WelcomeView.swift
services/gateway/: Cargo.toml
services/gateway/src/: main.rs
services/leads/: Cargo.toml
services/leads/src/: main.rs
