[workspace]
members = [
  "services/gateway",
  "services/leads",
  "packages/rust/domain",
  "packages/rust/telemetry"
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
mongodb = "2.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
dotenvy = "0.15"
anyhow = "1"
