[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
telemetry = { path = "../../packages/rust/telemetry" }
